--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h2>Belum selesai dibaca</h2>
 
         <div id="uncompleteBookshelfList" class="book_list">
-          <article class="book_item">
+          <!-- <article class="book_item">
             <h3>Book Title</h3>
             <p>Penulis: John Doe</p>
             <p>Tahun: 2002</p>
@@ -67,7 +67,7 @@
               <button class="green">Selesai dibaca</button>
               <button class="red">Hapus buku</button>
             </div>
-          </article>
+          </article> -->
         </div>
       </section>
 
@@ -75,7 +75,7 @@
         <h2>Selesai dibaca</h2>
 
         <div id="completeBookshelfList" class="book_list">
-          <article class="book_item">
+          <!-- <article class="book_item">
             <h3>Book Title</h3>
             <p>Penulis: John Doe</p>
             <p>Tahun: 2002</p>
@@ -84,7 +84,7 @@
               <button class="green">Belum selesai di Baca</button>
               <button class="red">Hapus buku</button>
             </div>
-          </article>
+          </article> -->
         </div>
       </section>
     </main>
