add modal at delete

--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
           </article> -->
         </div>
       </section>
+      <!-- Modal untuk konfirmasi penghapusan -->
+      <div id="deleteModal" class="modal" >
+        <div class="modal-content">
+          <p>Apakah Anda yakin ingin menghapus buku ini?</p>
+          <button id="confirmDelete">Ya</button>
+          <button id="cancelDelete">Tidak</button>
+        </div>
+      </div>
     </main>
 
     <script src="main.js"></script>
